--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview --port $PORT --host"
+    "start": "vite preview --port ${PORT:-5000} --host 0.0.0.0"
   },
   "dependencies": {
     "react": "^19.2.0",
