--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0"
+    "start": "serve -s dist -l ${PORT:-5000}"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "serve": "^14.2.5",
     "vite": "npm:rolldown-vite@7.2.5"
   },
   "overrides": {
