--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "serve -s dist -l tcp://0.0.0.0:${PORT:-5000}"
+    "start": "serve -s dist -l ${PORT:-5000}"
   },
   "dependencies": {
     "react": "^19.2.0",
